// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`productImage must show image of the product inside the productCard 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="no-name-provided"
    className="productImg undefined"
    src="https://th.bing.com/th/id/OIP.UPn4LXlCa5zuvmtt_rhlUgHaHa?pid=ImgDet&rs=1"
  />
</div>
`;

exports[`productImage must show the component without an image 1`] = `
<img
  className="productImg undefined"
  src="https://th.bing.com/th/id/OIP.UPn4LXlCa5zuvmtt_rhlUgHaHa?pid=ImgDet&rs=1"
/>
`;
